build/log/idf_py_stderr_output_39164
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c: In function 'mqtt_app_start':
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:11:10: error: 'esp_mqtt_client_config_t' has no member named 'uri'
   11 |         .uri = "mqtt://",
      |          ^~~
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:12:10: error: 'esp_mqtt_client_config_t' has no member named 'username'
   12 |         .username = "mudar para o nove token da thigsboard",
      |          ^~~~~~~~
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:10:41: error: missing braces around initializer [-Werror=missing-braces]
   10 |     esp_mqtt_client_config_t mqtt_cfg = {
      |                                         ^
   11 |         .uri = "mqtt://",
      |                {{       }}
   12 |         .username = "mudar para o nove token da thigsboard",
      |                     {
   13 |     };
      |     }
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:16:62: error: 'mqtt_event_handler' undeclared (first use in this function); did you mean 'esp_mqtt_event_handle_t'?
   16 |     esp_mqtt_client_register_event(client, ESP_EVENT_ANY_ID, mqtt_event_handler, client);
      |                                                              ^~~~~~~~~~~~~~~~~~
      |                                                              esp_mqtt_event_handle_t
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:16:62: note: each undeclared identifier is reported only once for each function it appears in
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c: At top level:
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:20:13: warning: 'mqtt_event_handler' defined but not used [-Wunused-function]
   20 | static void mqtt_event_handler(void *handler_args, esp_event_base_t base, int32_t event_id, void *event_data)
      |             ^~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/components/CMakeFiles/__idf_components.dir/mqtt_app.c.obj] Error 1
make[1]: *** [esp-idf/components/CMakeFiles/__idf_components.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [all] Error 2
